--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,7 +3,8 @@
     "DefaultConnection" : "Data source=datingapp.db"
 
   },
-
+  
+  "TokenKey" : "super secret unguessable key",
 
   "Logging": {
     "LogLevel": {
